--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <input type="text" id="input" placeholder="Type a message...">
         <button id="send">Send</button>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/toxicity"></script>
     <script src="script.js"></script>
 </body>
 </html>
