--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button id="send">Send</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/toxicity"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/qna"></script>
     <script src="script.js"></script>
 </body>
 </html>
