--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Chatbot</title>
+    <title>Jeff AI</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>AI Chatbot</h1>
+    <h1>Jeff AI</h1>
     <div id="chatbox">
         <div id="messages"></div>
         <input type="text" id="input" placeholder="Type a message...">
