--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Jeff AI</h1>
+    <header>
+        <h1>Jeff AI</h1>
+    </header>
     <div id="chatbox">
         <div id="messages"></div>
         <input type="text" id="input" placeholder="Type a message...">
